--- a/React/06_redux/01_basic/05_redux-actions.html
+++ b/React/06_redux/01_basic/05_redux-actions.html
@@ -13,7 +13,10 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- 리덕스 -->
     <script src="https://unpkg.com/redux@4.2.0/dist/redux.js"></script>
+    <!-- 리액트 리덕스 -->
     <script src="https://unpkg.com/react-redux@8.1.3/dist/react-redux.js"></script>
+    <!-- 리덕스 액션즈 -->
+    <script src="https://unpkg.com/redux-actions@2.6.5/dist/redux-actions.js"></script>
 </head>
 <body>
     <div id="root"></div>
@@ -22,6 +25,7 @@
         
         const { createStore } = Redux;
         const { Provider, useSelector, useDispatch } = ReactRedux;
+        const {createAction, createActions} = ReduxActions;
 
         /* Ducks 패턴에 의하면 초기 값, 액션, 리듀서를 관련 있는 state 별로 modules 폴더 하위에 관리한다.  */
 
@@ -30,25 +34,27 @@
 
         /* 액션 */
         /* 액션 타입을 상수로 선언한다. 접수사는 다른 모듈과 액션 없이 겹치지 않도록 하위 위함이다. */
-        const INCREMENT = 'count/INCREMENT';
-        const DECREMENT = 'count/DECREMENT';
+        const INCREMENT = 'count/INCREASE';
+        const DECREMENT = 'count/DECREASE';
 
-        /* 액션 타입을 함수 형태로 재사용 할 수 있도록 dispatch 호출 시 인자로 전달할 값을 반환하는 함수를 작성한다. */
-        /* 액션 객체 생성 */
-        const increase = () => ({
-            type: INCREMENT,
-            payload: {
-                incrementValue: 1
-            }
-        });
+        /* 1. createAction 함수 사용 */
+        /* 첫 번째 인자: action type 속성
+        * 두 번째 인자: 콜백 함수 반환 값이 payload */
+       /* createAction(INCREMENT, () => {}) */
+    //    const increase = createAction(INCREMENT, (amount = 1) => ({incrementValue: amount}));
+    //    const decrease = createAction(DECREMENT, (amount = 1) => ({decrementValue: amount}));
 
-        /* 액션 객체 생성 */
-        const decrease= () => ({
-            type: DECREMENT,
-            payload: {
-                decrementValue: 1
-            }
-        });
+        /* 2. cerateActions 함수 사용 */
+        /* 여러 개의 액션 함수를 한 번에 생성할 수 있다.
+        * 전달하는 객체의 key 값: action type 속성
+        * 전달하는 객체의 value 값: 함수 반환 값이 payload 속성
+        * action type의 속성명에 따라 반환 되는 객체의 키 값이 설정 된다.*/
+       const {count: {increase, decrease}} = createActions({
+        [INCREMENT]: (amount = 1) => ({incrementValue: amount}),
+        [DECREMENT]: (amount = 1) => ({decrementValue: amount})
+       })
+       /* count/ABC_DEF 
+       * {count{abcDef}}*/
 
         /* Reducer 함수 선언 */
         function reducer(state = initialState, {type, payload}) {
@@ -73,19 +79,19 @@
 
             /* 함수 호출 */
             const increaseCount = () => {
-                dispatch(increase());
+                dispatch(increase(5));
             };
 
             /* 함수 호출 */
             const decreaseCount = () => {
-                dispatch(decrease());
+                dispatch(decrease(5));
             };
 
             return(
                 <>
                     <h1>{`Count: ${count}`}</h1>
-                    <button onClick={increaseCount}>+1</button>
-                    <button onClick={decreaseCount}>-1</button>
+                    <button onClick={increaseCount}>+5</button>
+                    <button onClick={decreaseCount}>-5</button>
                 </>
             )
         }
