--- a/React/templates.html
+++ b/React/templates.html
@@ -14,6 +14,8 @@
     <!-- 리덕스 -->
     <script src="https://unpkg.com/redux@4.2.0/dist/redux.js"></script>
     <script src="https://unpkg.com/react-redux@8.1.3/dist/react-redux.js"></script>
+    <!-- 리덕스 액션즈 -->
+    <script src="https://unpkg.com/redux-actions@2.6.5/dist/redux-actions.js"></script>
 </head>
 <body>
     <div id="root"></div>
