--- a/React/06_redux/02_midleware/02_redux-logger.html
+++ b/React/06_redux/02_midleware/02_redux-logger.html
@@ -17,24 +17,16 @@
     <script src="https://unpkg.com/react-redux@8.1.3/dist/react-redux.js"></script>
     <!-- 리덕스 액션즈 -->
     <script src="https://unpkg.com/redux-actions@2.6.5/dist/redux-actions.js"></script>
+    <!-- 리덕스 로거 -->
+    <script src="https://unpkg.com/redux-logger@3.0.6/dist/redux-logger.js"></script>
 </head>
 <body>
     <div id="root"></div>
 
     <script type="text/babel">
 
-        /* 리덕스 미들웨어
-        * dispatch에서 reducer 함수 호출
-        * dispatch(action) -> middleware -> reducer(state, action -> store 저장) 
-        * 추가적인 작업? 특정 조건에 따른 액션 무시, 수정, 로깅, 트리거 액션, 함수 호출 등
-        * 주로 사용하는 용도는 비동기 작업 처리(redux-thunk, redux-sage 등)*/
-
-        /* 액션을 출력하는 로그 기능을 가지는 간단한 미들 웨어 */
-        const consoleLoggingMiddleware = store => next => action => {
-            console.log(action);            // 액션 객체를 출력하는 콘솔 로그 기능
-            const result = next(action);    // 다음 미들웨어 또는 리듀서에게 액션을 전달
-            return result;                  // 반환하는 result는 dispatch(action)의 결과물
-        }
+        /* 로깅 미들웨어로 가장 많이 사용되고 있는 redux-logger 적용 */
+        const logger = reduxLogger.createLogger();
         
         /* ------------------------------- modules ------------------------------------- */
         const {createAction, createActions, handleActions} = ReduxActions;
@@ -98,7 +90,7 @@
             reducer,
             /* 미들웨어를 적용하겠다. */
             compose(
-                applyMiddleware(consoleLoggingMiddleware),
+                applyMiddleware(logger),
                 window.__REDUX_DEVTOOLS_EXTENSION__ && window.__REDUX_DEVTOOLS_EXTENSION__()
             )
         );
