--- a/React/06_redux/02_midleware/04_redux-fetch-resolve.html
+++ b/React/06_redux/02_midleware/04_redux-fetch-resolve.html
@@ -17,46 +17,37 @@
     <script src="https://unpkg.com/react-redux@8.1.3/dist/react-redux.js"></script>
     <!-- 리덕스 액션즈 -->
     <script src="https://unpkg.com/redux-actions@2.6.5/dist/redux-actions.js"></script>
+    <!-- 리덕스 로거 -->
+    <script src="https://unpkg.com/redux-logger@3.0.6/dist/redux-logger.js"></script>
 </head>
 <body>
     <div id="root"></div>
 
     <script type="text/babel">
 
-        /* 리덕스 미들웨어
-        * dispatch에서 reducer 함수 호출
-        * dispatch(action) -> middleware -> reducer(state, action -> store 저장) 
-        * 추가적인 작업? 특정 조건에 따른 액션 무시, 수정, 로깅, 트리거 액션, 함수 호출 등
-        * 주로 사용하는 용도는 비동기 작업 처리(redux-thunk, redux-sage 등)*/
-
-        /* 액션을 출력하는 로그 기능을 가지는 간단한 미들 웨어 */
-        const consoleLoggingMiddleware = store => next => action => {
-            console.log(action);            // 액션 객체를 출력하는 콘솔 로그 기능
-            const result = next(action);    // 다음 미들웨어 또는 리듀서에게 액션을 전달
-            return result;                  // 반환하는 result는 dispatch(action)의 결과물
-        }
-        
         /* ------------------------------- modules ------------------------------------- */
         const {createAction, createActions, handleActions} = ReduxActions;
 
         /* 초기 값 설정 */
-        const initialState = 0;
+        const initialState = [];
 
         /* 액션 */
-        const INCREMENT = 'count/INCREASE';
-        const DECREMENT = 'count/DECREASE';
+        const FETCH_DATA = 'FETCH_DATA';
 
-        const {count: {increase, decrease}} = createActions({
-            [INCREMENT]: (amount = 1) => ({incrementValue: amount}),
-            [DECREMENT]: (amount = 1) => ({decrementValue: amount})
+        const {fetchData} = createActions({
+            [FETCH_DATA]: async () => {}
         })
 
+        /* 미들 웨어 */
+        const fetchUser = store => next => async (action) => {
+            const userData = await fetch('https://jsonplaceholder.typicode.com/users')
+                .then(res => res.json());
+            next({...action, payload: userData});
+        }
+
         const reducer = handleActions({
-            [INCREMENT] : (state, {payload: {incrementValue}}) => {
-                return state + incrementValue;
-            },
-            [DECREMENT] : (state, {payload: {decrementValue}}) => {
-                return state - decrementValue;
+            [FETCH_DATA] : (state, {payload}) => {
+                return [...payload];
             }
         }, initialState);
 
@@ -66,42 +57,32 @@
 
         function App() {
 
-            const count = useSelector(state => state);
+            const users = useSelector(state => state);
             const dispatch = useDispatch();
 
-            /* 함수 호출 */
-            const increaseCount = () => {
-                dispatch(increase(5));
-            };
-
-            /* 함수 호출 */
-            const decreaseCount = () => {
-                dispatch(decrease(5));
-            };
+            const onClickHandler = () => {
+                dispatch(fetchData());
+                console.log('user: ', users);
+            }
 
             return(
                 <>
-                    <h1>{`Count: ${count}`}</h1>
-                    <button onClick={increaseCount}>+5</button>
-                    <button onClick={decreaseCount}>-5</button>
+                    <h1>{`회원 목록`}</h1>
+                    <button onClick={onClickHandler}>조회하기</button>
+                    <ul>
+                        {users.map(user => <li key={user.id}>{user.name}</li>)}
+                    </ul>
                 </>
             )
         }
 
         /* -------------------------------- store --------------------------------------- */
 
+        const { createStore, applyMiddleware } = Redux;
         const {Provider} = ReactRedux;
-        const { createStore, applyMiddleware, compose } = Redux;
         
         /* 리듀서 함수를 전달하며 상태 값을 관리할 스토어 생성 */
-        const store = createStore(
-            reducer,
-            /* 미들웨어를 적용하겠다. */
-            compose(
-                applyMiddleware(consoleLoggingMiddleware),
-                window.__REDUX_DEVTOOLS_EXTENSION__ && window.__REDUX_DEVTOOLS_EXTENSION__()
-            )
-        );
+        const store = createStore(reducer, applyMiddleware(fetchUser));
 
         /* Provider: App이 store를 구독하고 있을 수 있도록 기능을 처리 
         * 컴포넌트로 store를 props로 전달하면 하위 컴포넌트는 store를 자동으로 구동하게 된다. 
