--- a/React/templates.html
+++ b/React/templates.html
@@ -16,6 +16,8 @@
     <script src="https://unpkg.com/react-redux@8.1.3/dist/react-redux.js"></script>
     <!-- 리덕스 액션즈 -->
     <script src="https://unpkg.com/redux-actions@2.6.5/dist/redux-actions.js"></script>
+    <!-- 리덕스 로거 -->
+    <script src="https://unpkg.com/redux-logger@3.0.6/dist/redux-logger.js"></script>
 </head>
 <body>
     <div id="root"></div>
