--- a/React/06_redux/02_midleware/06_midleware-order.html
+++ b/React/06_redux/02_midleware/06_midleware-order.html
@@ -77,7 +77,7 @@
 
             /* 함수 호출 */
             const increaseCount = () => {
-                dispatch(increase(5));
+                dispatch(increase());
             };
 
             /* 함수 호출 */
