--- a/React/06_redux/02_midleware/05_redux-middleware-thunk.html
+++ b/React/06_redux/02_midleware/05_redux-middleware-thunk.html
@@ -46,7 +46,7 @@
         const fetchUser = async (dispatch, getState) => {
             const userData = await axios('https://jsonplaceholder.typicode.com/users')
                 .then(res => res.data);
-            next({...action, payload: userData});
+            dispatch({type: FETCH_DATA, payload: userData});
         }
 
         /* Reducer */
