리덕스 복습

--- a/React/06_redux/01_basic/04_action-function.html
+++ b/React/06_redux/01_basic/04_action-function.html
@@ -29,7 +29,7 @@
         const initialState = 0;
 
         /* 액션 */
-        /* 액션 타입을 상수로 선언한다. 접수사는 다른 모듈과 액션 없이 겹치지 않도록 하위 위함이다. */
+        /* 액션 타입을 상수로 선언한다. 접두사는 다른 모듈과 액션 없이 겹치지 않도록 하기 위함이다. */
         const INCREMENT = 'count/INCREMENT';
         const DECREMENT = 'count/DECREMENT';
 
