--- a/React/06_redux/02_midleware/03_redux-fetch-problem.html
+++ b/React/06_redux/02_midleware/03_redux-fetch-problem.html
@@ -66,7 +66,7 @@
             return(
                 <>
                     <h1>{`회원 목록`}</h1>
-                    <button onClick={decreaseCount}>조회하기</button>
+                    <button onClick={onClickHandler}>조회하기</button>
                 </>
             )
         }
