리액트 CRA 환경 리덕스 모듈 설정

--- a/React/06_redux/02_midleware/05_redux-middleware-thunk.html
+++ b/React/06_redux/02_midleware/05_redux-middleware-thunk.html
@@ -51,9 +51,9 @@
 
         /* Reducer */
         const reducer = handleActions({
-            [FETCH_DATA] : (state, {payload}) => {
+            [FETCH_DATA] : [(state, {payload}) => {
                 return [...payload];
-            }
+            }]
         }, initialState);
 
         /* -------------------------------- ui --------------------------------------- */
